@@ -1,5 +1,12 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-2.3.10:
+  * enhancement: During generic function dispatch, for a generic function
+    using standard- or short-method-combination, if there are no applicable
+    primary methods the system will call the generic function
+    SB-PCL:NO-PRIMARY-METHOD, whose default behaviour is to signal an error.
+    Users may define methods on this generic function.
+
 changes in sbcl-2.3.10 relative to sbcl-2.3.9:
   * enhancement: The compiler now allows stack allocating vectors of any size
     on all safety levels, not just those which it can prove are of sub-page
